--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -5,16 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="Calculator" Height="550.5" Width="340" Background="#FF1BE0BC">
+        Title="Calculator" Height="550.5" Width="340" Background="#FF1BE0BC" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid Height="170" Margin="21,10,21,0" VerticalAlignment="Top">
         <TextBlock x:Name="DisplayBox2" Margin="8,10,10,63" TextWrapping="Wrap" Background="White" Cursor="None" IsEnabled="False"/>
         <TextBlock x:Name="DisplayBox" Margin="8,0,10,10" TextWrapping="Wrap" Text="" Background="#FFF9EDED" FontSize="14" Height="53" VerticalAlignment="Bottom"/>
         <Grid Margin="0,0,-3,-320" Height="303" VerticalAlignment="Bottom" Background="#FF1BE0BC" HorizontalAlignment="Right" Width="290">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="72*"/>
+                <ColumnDefinition Width="73*"/>
+                <ColumnDefinition Width="72*"/>
+                <ColumnDefinition Width="31*"/>
+                <ColumnDefinition Width="42*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
@@ -25,24 +26,24 @@
             </Grid.RowDefinitions>
             <Button x:Name="buttonDel" Content="DEL" Margin="0,0,10,10" Grid.Column="1" FontSize="14" Click="buttonDel_Click"/>
             <Button x:Name="buttonPer" Content="%" Margin="0,0,10,10" Grid.Column="2" FontSize="14"/>
-            <Button x:Name="buttonSlash" Content="/" Margin="0,0,10,10" Grid.Column="3" FontSize="14"/>
+            <Button x:Name="buttonDiv" Content="/" Margin="0,0,10,10" Grid.Column="3" FontSize="14" Click="buttonDiv_Click" Grid.ColumnSpan="2"/>
             <Button x:Name="buttonClean" Content="C" Margin="0,0,10,10" FontSize="14"/>
-            <Button x:Name="button7" Content="7" Margin="0,0,10,10" Grid.Row="1" Background="#FFF7F9F9" FontSize="14" Click="button7_Click"/>
-            <Button x:Name="button2" Content="2" Margin="0,0,10,11.006" Grid.Row="3" Grid.Column="1" Background="#FFFBFBFB" FontSize="14" Click="button2_Click"/>
-            <Button x:Name="button4" Content="4" Margin="0,-0.001,10,10" Grid.Row="2" Background="#FFF5F9F8" FontSize="14" Click="button4_Click"/>
-            <Button x:Name="button5" Content="5" Margin="0,-0.001,10,10" Grid.Row="2" Grid.Column="1" Background="#FFFDFDFD" FontSize="14" Click="button5_Click"/>
-            <Button x:Name="button18" Content="8" Margin="0,-0.001,10,10" Grid.Row="1" Grid.Column="1" Background="#FFF9F9F9" FontSize="14" Click="button18_Click"/>
-            <Button x:Name="button9" Content="9" Margin="0,-0.001,10,10" Grid.Row="1" Grid.Column="2" Background="#FFFBFDFD" FontSize="14" Click="button9_Click"/>
-            <Button x:Name="buttonMulti" Content="*" Margin="0,-0.001,10,10" Grid.Row="1" Grid.Column="3" FontSize="14"/>
-            <Button x:Name="button6" Content="6" Margin="0,0,10,9.999" Grid.Row="2" Grid.Column="2" Background="#FFF9F9F9" FontSize="14" Click="button6_Click"/>
-            <Button x:Name="button3" Content="3" Margin="0,1.006,10,10" Grid.Row="3" Grid.Column="2" Background="#FFFDFFFF" FontSize="14" Click="button3_Click"/>
-            <Button x:Name="buttonDiv" Content="-" Margin="0,0,10,9.999" Grid.Row="2" Grid.Column="3" FontSize="14" Click="buttonDiv_Click"/>
-            <Button x:Name="buttonPlus" Content="+" Margin="0,1.006,10,9.999" Grid.Row="3" Grid.Column="3" FontSize="14" Click="buttonPlus_Click_1"/>
-            <Button x:Name="button10" Content="0" Margin="0,0,10,10" Grid.Row="4" Grid.Column="1" Background="#FFF9FBFB" FontSize="14" Click="button10_Click"/>
+            <Button x:Name="button7" Content="7" Margin="0,0,10,10" Grid.Row="1" Background="#FFF7F9F9" FontSize="14" Click="buttonNumber_Click"/>
+            <Button x:Name="button2" Content="2" Margin="0,0,10,11" Grid.Row="3" Grid.Column="1" Background="#FFFBFBFB" FontSize="14" Click="buttonNumber_Click"/>
+            <Button x:Name="button4" Content="4" Margin="0,0,10,10" Grid.Row="2" Background="#FFF5F9F8" FontSize="14" Click="buttonNumber_Click"/>
+            <Button x:Name="button5" Content="5" Margin="0,0,10,10" Grid.Row="2" Grid.Column="1" Background="#FFFDFDFD" FontSize="14" Click="buttonNumber_Click"/>
+            <Button x:Name="button8" Content="8" Margin="0,0,10,10" Grid.Row="1" Grid.Column="1" Background="#FFF9F9F9" FontSize="14" Click="buttonNumber_Click"/>
+            <Button x:Name="button9" Content="9" Margin="0,0,10,10" Grid.Row="1" Grid.Column="2" Background="#FFFBFDFD" FontSize="14" Click="buttonNumber_Click"/>
+            <Button x:Name="buttonMulti" Content="*" Margin="0,0,10,10" Grid.Row="1" Grid.Column="3" FontSize="14" Grid.ColumnSpan="2" Click="buttonMulti_Click"/>
+            <Button x:Name="button6" Content="6" Margin="0,0,10,10" Grid.Row="2" Grid.Column="2" Background="#FFF9F9F9" FontSize="14" Click="buttonNumber_Click"/>
+            <Button x:Name="button3" Content="3" Margin="0,1,10,10" Grid.Row="3" Grid.Column="2" Background="#FFFDFFFF" FontSize="14" Click="buttonNumber_Click"/>
+            <Button x:Name="buttonSub" Content="-" Margin="0,0,10,10" Grid.Row="2" Grid.Column="3" FontSize="14" Click="buttonSub_Click" Grid.ColumnSpan="2"/>
+            <Button x:Name="buttonPlus" Content="+" Margin="0,1,10,10" Grid.Row="3" Grid.Column="3" FontSize="14" Click="buttonPlus_Click_1" Grid.ColumnSpan="2"/>
+            <Button x:Name="button0" Content="0" Margin="0,0,10,10" Grid.Row="4" Grid.Column="1" Background="#FFF9FBFB" FontSize="14" Click="buttonNumber_Click"/>
             <Button x:Name="buttonDot" Content="." Margin="0,0,10,10" Grid.Row="4" Grid.Column="2" FontSize="14"/>
-            <Button x:Name="buttonResult" Content="=" Margin="0,-0.001,10,10" Grid.Row="4" Grid.Column="3" FontSize="14"/>
-            <Button x:Name="button1" Content="1" Margin="0,1.007,10,9.999" Grid.Row="3" Background="#FFF3F9F8" FontSize="14" Click="button1_Click"/>
-            <Button x:Name="buttonClear" Content="CLEAR" Margin="0,0,10,9.999" Grid.Row="4" FontSize="14" Click="buttonClear_Click"/>
+            <Button x:Name="buttonResult" Content="=" Margin="0,0,10,10" Grid.Row="4" Grid.Column="3" FontSize="14" Grid.ColumnSpan="2" Click="buttonResult_Click"/>
+            <Button x:Name="button1" Content="1" Margin="0,1,10,10" Grid.Row="3" Background="#FFF3F9F8" FontSize="14" Click="buttonNumber_Click"/>
+            <Button x:Name="buttonClear" Content="CLEAR" Margin="0,0,10,10" Grid.Row="4" FontSize="14" Click="buttonClear_Click"/>
         </Grid>
     </Grid>
 </Window>
